# local-youtube-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CEO_WORKFLOW.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Project-workflow.md  README.md  SECURITY.md  TEST_PLAN.md  TEST_WORKFLOW.md  TTS_PROMPT.txt  YouTube_Voice_Optimizer.txt.txt  automate_all.py  automate_audacity.py  compile_video.py  correct_transcript_spelling.py  faster_whisper_transcribe_audio.py  fix_timestamps.py  flow_image_generator.py  gemini_utils.py  generate_thumbnail.py  generate_voice.py  inject_timestamps.py  json_compile_animation_prompt.py  prompt.txt  prompt_phase3.txt  pyproject.toml  pytest.ini  refine_prompt.txt  refine_script.py  requirements-dev.txt  requirements.txt  run_agency.py  script_image_generator.py  stitch_chapters.py  transcribe_audio.py  utils.py  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/hooks/: dcg.json
.github/workflows/: ci.yml  main.yml
.specify/: feature.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
.superpowers/sdd/: HANDOFF.md
.superpowers/sdd/reports/: task-10-e2e-validation-report.md  task-2-config-loader-report.md  task-3-encoder-detection-report.md  task-4-checkpoint-manager-report.md  task-5-ken-burns-builder-report.md  task-6-single-pass-report.md  task-7-legacy-refactor-report.md  task-8-pipeline-integration-report.md  task-9-loudnorm-persistence-report.md
Security Division Analysis/: remediation_guide.md  secret_audit_report.md  threat_model.md
docs/error-solving/: understood-errors.md
docs/short-term-plan/: CONTINUITY.md
docs/superpowers/plans/: 2025-07-11-compile-video-phase2.md  2026-07-11-prompt-designs-implementation.md
docs/superpowers/specs/: 2026-07-11-prompt-designs.md
specs/001-video-post-automations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-video-post-automations/checklists/: requirements.md
tests/: conftest.py
tests/integration/: test_run_singlepass.py
tests/unit/: test_camera_decisions.py  test_checkpoint.py  test_config.py  test_encoder.py  test_ken_burns.py  test_loudnorm.py  test_singlepass.py  test_subtitle_style.py  test_subtitles.py  test_timeline.py
